# noti-bot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_11_09_0200-748f2f8d17bc_init_tables.py  2024_11_10_2158-40e1db45cf2e_remove_constraint_time_to_notify.py  2024_11_11_1817-6955fb947fef_alter_column_name_add_columns_to_user_.py  2024_11_11_1828-df84c8a54911_delete_not_null_constraits_for_user.py  2024_11_17_2002-58add4e1f6ef_change_columns_names_move_notification_.py  2024_11_17_2121-988a84341f66_remove_constrait_nullable.py
app/db/: __init__.py  base.py  db_session.py  models.py  requests.py
app/db/requests/: notification_requests.py  user_requests.py
app/helpers/: datetime_helpers.py
app/services/: shedule_manager.py
app/services/reminder/: shedule_manager.py
app/tg_bot/: __init__.py
app/tg_bot/handlers/: commands.py  defoult_state_commands.py  fsm_get_notification.py  fsm_start_edit_profile.py
app/tg_bot/keyboards/: kb_select_advance_time.py  kb_select_user_utc.py
app/tg_bot/ru_text/: ru_text.py  ru_text.yaml
config_data/: config.py
