[tool.poetry]
name = "noti-bot"
version = "0.1.0"
description = ""
authors = ["Korolev Andrey <andkorolev93@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.13.1"
pydantic-settings = "^2.6.0"
aiogram-dialog = "^2.2.0"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
alembic = "^1.13.3"
pydantic-settings-yaml = "^0.2.0"
aiogram-calendar = "^0.5.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
